[package]
name = "yellowstone-grpc-proto"
version = "0.1.0"
edition = "2024"

[build-dependencies.anyhow]
version = "1.0.62"

[build-dependencies.tonic-build]
version = "0.12.1"

[dependencies.agave-geyser-plugin-interface]
optional = true
version = "~2.2.1"

[dependencies.base64]
optional = true
version = "0.22.1"

[dependencies.bincode]
optional = true
version = "1.3.3"

[dependencies.bs58]
optional = true
version = "0.5.1"

[dependencies.bytes]
optional = true
version = "1.3.0"

[dependencies.prost]
version = "0.13.1"

[dependencies.prost-types]
version = "0.13.3"

[dependencies.prost_011]
optional = true
package = "prost"
version = "0.11.9"

[dependencies.serde]
optional = true
version = "1.0.145"

[dependencies.smallvec]
optional = true
version = "1.13.2"

[dependencies.solana-account-decoder]
optional = true
version = "~2.2.1"

[dependencies.solana-sdk]
optional = true
version = "~2.2.1"

[dependencies.solana-storage-proto]
optional = true
version = "~2.2.1"

[dependencies.solana-transaction-status]
optional = true
version = "~2.2.1"

[dependencies.spl-token-2022]
optional = true
version = "6.0.0"

[dependencies.thiserror]
optional = true
version = "1.0.63"

[dependencies.tonic]
optional = true
version = "0.12.1"

[dev-dependencies.criterion]
version = "0.5.1"

[dev-dependencies.prost_011]
package = "prost"
version = "0.11.9"

[dev-dependencies.solana-storage-proto]
version = "~2.2.1"

[features]
convert = ["dep:bincode", "dep:solana-account-decoder", "dep:solana-sdk", "dep:solana-transaction-status"]
default = ["convert", "tonic", "tonic-compression"]
plugin = ["convert", "dep:agave-geyser-plugin-interface", "dep:base64", "dep:bs58", "dep:bytes", "dep:serde", "dep:smallvec", "dep:spl-token-2022", "dep:thiserror", "dep:tonic"]
plugin-bench = ["plugin", "dep:prost_011", "dep:solana-storage-proto"]
tonic = ["dep:tonic"]
tonic-compression = ["tonic", "tonic/gzip", "tonic/zstd"]

[lib]
name = "yellowstone_grpc_proto"
path = "src/lib.rs"